--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "babel-node index.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive",
     "test:watch": "npm run test -- --watch"
   },
@@ -24,6 +25,9 @@
     ]
   },
   "dependencies": {
-    "immutable": "^3.8.2"
+    "chai": "^4.1.2",
+    "chai-immutable": "^1.6.0",
+    "immutable": "^3.8.2",
+    "redux": "^4.0.0"
   }
 }
